--- a/background.html
+++ b/background.html
@@ -5,6 +5,8 @@
 	<script type="text/javascript" src="js/background.js"></script>
 </head>
 <body>
+	<div id="linkList">
 
+	</div>
 </body>
 </html>
