Deletion of saved pages functionality added

--- a/listTile.html
+++ b/listTile.html
@@ -5,7 +5,9 @@
 	<link href="css/style.css" rel="stylesheet"></link>
 </head>
 <body>
-	<div class="saved" id="saved">Load Saved tabs</div>
+	<div class="saved" id="saved">Load Saved tabs <div id="manage" class="settings"/>&#9881;</div>
+	<div id="header">
+	</div>
 	<h1>Links visited:</h1>
 	<div id="linkList">
 
