--- a/listTile.html
+++ b/listTile.html
@@ -5,7 +5,7 @@
 	<link href="css/style.css" rel="stylesheet"></link>
 </head>
 <body>
-	<div class="saved" id="saved">Load Saved tabs <div id="manage" class="settings"/>&#9881;</div>
+	<div class="saved" id="saved">Load Saved tabs <div id="manage" class="settings"/>&#9881;</div></div>
 	<div id="header">
 	</div>
 	<h1>Links visited:</h1>
